Some more parts of the appBundler plugin